--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,8 +4,25 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Document</title>
+        <link rel="stylesheet" href="/styles.css" />
     </head>
     <body>
         <%- include("partials/header") %>
+        <div id="chatroom">
+            <% for (message of messages) { %>
+                <div class="message">
+                    <div
+                        class="profile-name"
+                        <%- `style="background-color: ${message.color};"`%>
+                    >
+                        <%= message.user[0] %>
+                    </div>
+                    <div class="message-text-div">
+                        <div class="message-text"><%= message.text %></div>
+                        
+                    </div>
+                </div>
+            <% } %>
+        </div>
     </body>
 </html>
