--- a/public/styles.css
+++ b/public/styles.css
@@ -11,7 +11,7 @@ body {
 
 #header-div {
     width: 100%;
-    height: 100px;
+    height: 80px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -23,13 +23,15 @@ body {
 
 #chatroom {
     margin: 20px auto 0;
-    height: 700px;
+    height: 680px;
     width: 550px;
     border: 2px solid grey;
+    border-radius: 5px;
     padding: 20px;
     display: flex;
     flex-direction: column;
     gap: 20px;
+    overflow: auto;
 }
 
 .message {
@@ -73,4 +75,74 @@ body {
 }
 #chatroom .message:nth-child(even) .message-text-div {
     justify-content: end;
+}
+
+.btn-div {
+    width: 100vw;
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
+}
+
+#new-btn {
+    width: 550px;
+    font-size: 1.2rem;
+    padding: 10px 0;
+    background-color: rgb(21, 91, 172);
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    text-decoration: none;
+    text-align: center;
+}
+
+#new-btn:active {
+    transform: translateY(2px);
+}
+
+.form-div {
+    margin: 20px auto 0;
+    height: 250px;
+    width: 280px;
+    border: 2px solid grey;
+    border-radius: 5px;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+.input-div {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+input {
+    padding: 5px;
+}
+
+.post-btn-div {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
+}
+
+#post-btn {
+    width: 100%;
+    font-size: 1.2rem;
+    padding: 10px 0;
+    background-color: rgb(21, 91, 172);
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    text-decoration: none;
+    text-align: center;
+}
+
+#new-btn:active {
+    transform: translateY(2px);
 }
