--- a/views/index.ejs
+++ b/views/index.ejs
@@ -24,5 +24,8 @@
                 </div>
             <% } %>
         </div>
+        <div class="btn-div">
+            <a href="/new" id="new-btn">New Message</a>
+        </div>
     </body>
 </html>
